core/roboconf-core/src/test/resources/configurations/invalid/facet-without-component.graph
vm {
    children: f;
    installer: target;
}

facet f {
     children: t;
}

# "t" is unreachable because there is no component with the "f" facet.
t {
      installer: script;
}
